--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="description.html">Описание</a></li>
-                <li><a href="reviews.html">Отзывы</a></li>
+                <li><a href="actors.html">Герои</a></li>
+                <li><a href="awards.html">Награды</a></li>
             </ul>
         </nav>
     </header>
