--- a/index.html
+++ b/index.html
@@ -1,39 +1,14 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Главная страница сайта о сериале "Друзья".">
-    <title>Friends</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Hello World!</title>
 </head>
 <body>
-    <header>
-        <h1>Friends</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="description.html">Описание</a></li>
-                <li><a href="actors.html">Герои</a></li>
-                <li><a href="awards.html">Награды</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h2>Добро пожаловать на сайт о Dota 2!</h2>
-        <p>Здесь вы найдете информацию об игре, её описание и отзывы игроков.</p>
-        <img src="dota2-logo.png" alt="Логотип Dota 2" class="logo" style="float: left; margin-right: 20px;">
-        <p>Dota 2 — это популярная многопользовательская онлайн-игра в жанре MOBA (Multiplayer Online Battle Arena), разработанная и изданная компанией Valve.</p>
-        <h3>Содержание</h3>
-        <ul>
-            <li><a href="#gameplay">Геймплей</a></li>
-            <li><a href="#heroes">Герои</a></li>
-            <li><a href="#pros-cons">Плюсы и минусы</a></li>
-        </ul>
-      
-    </main>
-    <footer>
-        <p>&copy; 2024 Мой сайт о Dota 2</p>
-        <p><a href="https://www.dota2.com" target="_blank">Официальный сайт Dota 2</a></p>
-    </footer>
+
+    <?php
+        echo "<h1 style='color: purple;'>Hello world!</h1>";
+    ?>
 </body>
+</html>
