--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 
-        echo "<h1 style='color: purple;'>Hello world!</h1>";
+       <h1 style='color: purple;'>Hello world!</h1>"
 
 </body>
 </html>
